fix: find event filter
